--- a/app/src/main/res/layout/activity_tours.xml
+++ b/app/src/main/res/layout/activity_tours.xml
@@ -13,9 +13,8 @@
         android:id="@+id/tourActivity_toolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@drawable/gradient_toolbar">
+        android:background="@drawable/gradient_toolbar"/>
 
-    </android.support.v7.widget.Toolbar>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
