--- a/app/src/main/res/layout/activity_flight.xml
+++ b/app/src/main/res/layout/activity_flight.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.lenovo.finalgp_test1.FlightActivity">
 
-</LinearLayout>
+
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/tabLayout2">
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/RoundTrip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ROUNDTRIP" />
+
+        <android.support.design.widget.TabItem
+            android:id="@+id/OneWay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="ONEWAY" />
+
+    </android.support.design.widget.TabLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        class="android.support.design.widget.TabLayout.TabView"
+        id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tabLayout2"
+        tools:ignore="DuplicateIds" />
+
+</RelativeLayout>
