--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,12 +5,15 @@
     android:layout_height="match_parent"
     tools:context="com.example.lenovo.finalgp_test1.HomeActivity">
 
+   <include/>
+
     <ImageView
         android:id="@+id/backGround"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/mountain"
         android:scaleType="fitStart"/>
+
 
     <ImageButton
         android:id="@+id/HotelimageButton"
@@ -111,13 +114,6 @@
         android:textColor="#0b0941"
         android:layout_marginTop="275dp"
         android:layout_marginLeft="10dp"/>
-
-    <View
-        android:layout_width="140dp"
-        android:layout_height="1dp"
-        android:background="#fff"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="264dp"/>
 
     <LinearLayout
     android:layout_width="match_parent"
