--- a/app/src/main/res/layout/activity_hotel.xml
+++ b/app/src/main/res/layout/activity_hotel.xml
@@ -30,8 +30,7 @@
             android:src="@drawable/ic_search_black_24dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:layout_below="@id/toolbar_Searchhotel"
-            />
+            android:layout_below="@id/toolbar_Searchhotel"/>
 
         <Spinner
             android:id="@+id/searchCountryBtn"
