Homie was here!

--- a/app/src/main/res/layout/activity_generate_itinerary.xml
+++ b/app/src/main/res/layout/activity_generate_itinerary.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.lenovo.finalgp_test1.GenerateItineraryActivity">
-
-
+<!--comment-->
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_GenerateIT"
         android:layout_width="match_parent"
@@ -54,13 +55,11 @@
         android:textColor="#ef4508"
         android:textSize="20sp"/>
 
-    <!--<com.squareup.timessquare.CalendarPickerView-->
-        <!--android:id="@+id/calendar_GIt"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="170dp"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:layout_below="@id/calendar_GIt_TV"/>-->
-
+    <com.squareup.timessquare.CalendarPickerView
+        android:id="@+id/calendar_GIt"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_below="@id/calendar_GIt_TV"/>
 
     <TextView
         android:id="@+id/interestsTV"
@@ -71,8 +70,7 @@
         android:textSize="20sp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_below="@id/calendar_GIt_TV"/>
-        <!--android:layout_below="@id/calendar_GIt"-->
+        android:layout_below="@id/calendar_GIt"/>
 
 
     <RadioButton
@@ -191,4 +189,20 @@
         android:layout_marginTop="25dp"
         android:layout_marginLeft="150dp"
         android:entries="@array/Class"/>
+
+    <Button
+        android:id="@+id/generateIT_Btn"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/flightCategory_TV_GIt"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/orangesliderr"
+        android:layout_centerHorizontal="true"
+        android:text="Generate"
+        android:textColor="#FFFF"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        android:textSize="20sp"/>
+
 </RelativeLayout>
+</ScrollView>
